--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-ipykernel
 jupyterlab
 ipywidgets
-matplotlib
-numpy
-pandas
-opencv
-scikit-learn
-scikit-image
-scipy
-rasterio
-tensorboard
-tqdm
-yaml
+matplotlib==3.7.1
+numpy==1.22.3
+pandas==1.5.2
+scikit-learn==1.2.2
+scikit-image==0.19.3
+scipy==1.10.1
+rasterio==1.3.7
+tensorboard==2.12.2
+tqdm==4.65.0
+PyYAML==6.0
+geopandas==0.13.0
