--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -19,7 +19,7 @@ transformations:
 - d_flip
 - rotate
 aug_params:
-  rotation_degree: (-180, -90, 90, 180)
+  rotation_degree: [-180, -90, 90, 180]
 
 # DataLoader
 train_BatchSize: 10
@@ -28,13 +28,13 @@ val_test_BatchSize: 3
 # Model initialization params
 n_classes: 14
 input_channels: 18
-filter_config: (64, 128, 256, 512, 1024, 1024)
+filter_config: [64, 128, 256, 512, 1024, 1024]
 use_skipAtt: false
 train_dropout_rate: 0.15
 
 # Model compiler params
 working_dir: /home/workdir
-out_dir: output5
+out_dir: output6
 class_mapping:
   0: Unknown
   1: Natural Vegetation
@@ -61,9 +61,25 @@ epochs: 100
 optimizer: sam
 LR: 0.011
 LR_policy: PolynomialLR
-criterion: TverskyFocalLoss(weight=[0.0182553, 0.03123664, 0.02590038, 0.03026126,
-  0.04142966, 0.04371284, 0.15352935, 0.07286951, 0.10277024, 0.10736637, 0.1447082,
-  0.17132445, 0.0566358], ignore_index=0, gamma=0.9)
+criterion:
+    name: TverskyFocalLoss
+    weight:
+    - 0.0182553
+    - 0.03123664
+    - 0.02590038
+    - 0.03026126
+    - 0.04142966
+    - 0.04371284
+    - 0.15352935
+    - 0.07286951
+    - 0.10277024
+    - 0.10736637
+    - 0.1447082
+    - 0.17132445
+    - 0.0566358
+    ignore_index: 0
+    gamma: 0.9
+
 momentum: 0.95
 checkpoint_interval: 20
 resume: false
